--- a/stressapp/static/css/index.css
+++ b/stressapp/static/css/index.css
@@ -2,49 +2,6 @@ body {
     color: white;
 }
 
-
-.left {
-    top: 0vh;
-    left: 0vw;
-    position: absolute;
-    background-color: rgb(33, 216, 88);
-    height: 100vh;
-    width: 50vw;
-    transition: all 0.5s ease;
-}
-
-.right {
-    top: 0vh;
-    left: 50vw;
-    position: absolute;
-    background-color: rgb(56, 111, 230);
-    height: 100vh;
-    width: 50vw;
-    left: 50%;
-    transition: all 0.5s ease;
-}
-
-.left.active {
-    width: 100vw;
-}
-
-.left.deactive {
-    width: 0vw;
-    overflow: hidden;
-}
-
-.right.active {
-    top: 0;
-    left: 0;
-    width: 100vw;
-}
-
-.right.deactive {
-    width: 0vw;
-    left: 100%;
-    overflow: hidden;
-}
-
 span {
     position: absolute;
     top: 50%;
@@ -52,44 +9,180 @@ span {
     transform: translate(-50%, -50%);
 }
 
-.topbar {
-    z-index: 1;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    background-color: white;
-    border: 2px black;
-    height: 40px;
-    width: 100vw;
-
-}
-
-#topbar-sitetag {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-
-#sitelogo {
-    height: 50px;
-    width: 100px;
-}
-
 a {
     color: white;
 }
 
-#loadreg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all 0.5s ease;
+.form-group {
+    position: relative;
+    right: 15px;
+    width: 100%;
+    height: 17%;
 }
 
-#loadlog {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    .form-group input {
+        position: absolute;
+        left: 0;
+        height: 50%;
+        width: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        color: white;
+        border: 1px solid rgba(255, 255, 255, 1);
+        padding: 10px;
+        margin: 5px;
+        border-radius: 40px;
+    }
+
+    .form-group input::placeholder {
+        color: rgb(255, 255, 255);
+    }
+
+    .form-group i {
+        position: relative;
+        left: 115px;
+        font-size: 17px;
+    }
+
+
+#tag-selector {
+    position: relative;
+    top: 10px;
+    left: 1px;
 }
+
+    .signout {
+        height: 50px;
+        width: 150px;
+        z-index: 1;
+        position: fixed;
+        left: calc(100vw - 125px);
+    }
+
+    .left {
+        user-select: none;
+        font-size: 40px;
+        font-family: Helvetica;
+        top: 0vh;
+        left: 0vw;
+        position: absolute;
+        background-image: linear-gradient(90deg ,rgb(45, 207, 94), rgb(78, 138, 177));
+        height: 100vh;
+        width: 50vw;
+        transition: all 0.5s ease;
+        overflow: hidden;
+    }
+
+        .tag-selector {
+            height: 100%;
+            width: 50%;
+            left: 100px;
+            width: 50px;
+            height: 50px;
+        }
+
+        .loadreg {
+            padding: 20px;
+            padding-bottom: 40px;
+            text-align: center;
+            border: 2px solid rgb(255, 255, 255);
+            border-radius: 10px;
+            backdrop-filter: blur(100px);
+            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition-delay: 1s;
+            transition: all 0.5s ease;
+            opacity: 0%;
+        }
+
+        .form-div {
+            width: 100%;
+            height: 100%;
+        }
+
+        .loadreg.active {
+            position: absolute;
+            width: 250px;
+            height: 300px;
+            opacity: 100%;
+        }
+
+        .left.active {
+            width: 100vw;
+        }
+
+        .left.deactive {
+            width: 0vw;
+            overflow: hidden;
+        }
+
+            #reg {
+                opacity: 100%;
+                transition: all 0.5s ease;
+            }
+
+            .left.active #reg {
+                opacity: 0%;
+            }
+
+
+    .right {
+        user-select: none;
+        font-size: 40px;
+        font-family: Helvetica;
+        top: 0vh;
+        left: 50vw;
+        position: absolute;
+        background-image: linear-gradient(90deg, rgb(78, 138, 177), rgb(94, 45, 207));
+        height: 100vh;
+        width: 50vw;
+        left: 50%;
+        transition: all 0.5s ease;
+        overflow: hidden;
+    }
+
+        .loadlog {
+            padding: 20px;
+            text-align: center;
+            border: 2px solid rgb(255, 255, 255);
+            border-radius: 10px;
+            backdrop-filter: blur(100px);
+            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0%;
+            transition-delay: 10s;
+            transition: all 0.5s ease;
+        }
+
+        .loadlog.active {
+            opacity: 100%;
+        }
+
+        .right.active {
+            top: 0;
+            left: 0;
+            width: 100vw;
+        }
+
+        .right.deactive {
+            width: 0vw;
+            left: 100%;
+        }
+
+            #li {
+                opacity: 100%;
+                transition: all 0.5s ease;
+            }
+
+            .right.active #li {
+                opacity: 0%;
+            }
+
+
+
