--- a/stressapp/templates/signin.html
+++ b/stressapp/templates/signin.html
@@ -1,12 +1,14 @@
-<form method="post" action="/signin" class="mb-2">
+<form method="post" action="{% url 'signin' %}" class="mb-2">
     {% csrf_token %}
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Username" Required>
+        <i class="bx bxs-user"></i>
     </div>
     <div class="form-group">
         <label for="pass1">Password</label>
         <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Enter Your Password" Required>
+        <i class="bx bxs-lock-alt"></i>
     </div>
 
     <button type="submit" class="btn btn-primary">Log In</button>
