--- a/stressapp/static/css/index.css
+++ b/stressapp/static/css/index.css
@@ -2,28 +2,45 @@ body {
     color: white;
 }
 
-span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 a {
     color: white;
 }
 
+.form-div .btn {
+    position: relative;
+    width: 420px;
+    height: 57px;
+    bottom: 15px;
+
+    background-color: white;
+    color: rgba(0, 0, 0, .2);
+    border: none;
+    outline: none;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.form-control {
+    position: absolute;
+    height: 100%;
+}
+
 .form-group {
     position: relative;
-    right: 15px;
+    right: 10px;
     width: 100%;
-    height: 17%;
+    height: 15%;
 }
+
 
     .form-group input {
         position: absolute;
         left: 0;
-        height: 50%;
+        height: 20px;
         width: 100%;
         background: transparent;
         border: none;
@@ -31,7 +48,7 @@ a {
         color: white;
         border: 1px solid rgba(255, 255, 255, 1);
         padding: 10px;
-        margin: 5px;
+        margin: 1px;
         border-radius: 40px;
     }
 
@@ -40,17 +57,12 @@ a {
     }
 
     .form-group i {
-        position: relative;
-        left: 115px;
-        font-size: 17px;
+        position: absolute;
+        font-size: 25px;
+        left: 95%;
+        top: 54%;
+        transform: translateY(-60%);
     }
-
-
-#tag-selector {
-    position: relative;
-    top: 10px;
-    left: 1px;
-}
 
     .signout {
         height: 50px;
@@ -72,42 +84,94 @@ a {
         width: 50vw;
         transition: all 0.5s ease;
         overflow: hidden;
-    }
+    }   
 
-        .tag-selector {
-            height: 100%;
-            width: 50%;
-            left: 100px;
-            width: 50px;
-            height: 50px;
-        }
 
         .loadreg {
+            position: absolute;
             padding: 20px;
             padding-bottom: 40px;
-            text-align: center;
-            border: 2px solid rgb(255, 255, 255);
-            border-radius: 10px;
             backdrop-filter: blur(100px);
             box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+
+            border: 2px solid rgb(255, 255, 255);
+            border-radius: 10px;
+            
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            transition-delay: 1s;
+
             transition: all 0.5s ease;
             opacity: 0%;
         }
 
+            .loadreg.active {
+                width: 400px;
+                height: 500px;
+                opacity: 100%;
+            }
+
+            .regtxtform {
+                position: relative;
+                top: 50px;
+                height: 300px;
+            }
+        
+        .lhighlight {
+            height: 100vh;
+            width: 200px;
+            position: fixed;
+            z-index: 1;
+            transition: all ease 1s;
+            opacity: 0%;
+            background-image: linear-gradient(90deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
+        }
+
+            .left:hover .lhighlight {
+                z-index: 1;
+                opacity: 100%;
+                
+            }
+
+            .left.active .lhighlight {
+                opacity: 0%;
+                pointer-events: none;
+            }
+
+            .left.deactive .lhighlight {
+                opacity: 0%;
+                pointer-events: none;
+            }
+
+        .rhighlight {
+            height: 100vh;
+            width: 200px;
+            position: fixed;
+            left: calc(100vw - 200px);
+            z-index: 1;
+            transition: all 1s ease;
+            background-image: linear-gradient(270deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
+            opacity: 0%;
+        }
+
+            .right:hover .rhighlight {
+                opacity: 100%;
+                
+            }
+
+            .right.active .rhighlight {
+                opacity: 0%;
+                pointer-events: none;
+            }
+
+            .right.deactive .rhighlight {
+                opacity: 0%;
+                pointer-events: none;
+            }
+
         .form-div {
             width: 100%;
             height: 100%;
-        }
-
-        .loadreg.active {
-            position: absolute;
-            width: 250px;
-            height: 300px;
-            opacity: 100%;
         }
 
         .left.active {
@@ -120,12 +184,18 @@ a {
         }
 
             #reg {
+                z-index: 1;
+                position: absolute;
+                left: 50%;
+                top: 50%;
                 opacity: 100%;
+                transform: translate(-50%, -50%);
                 transition: all 0.5s ease;
             }
 
             .left.active #reg {
-                opacity: 0%;
+                left: 50%;
+                top: 10%;
             }
 
 
@@ -145,23 +215,58 @@ a {
     }
 
         .loadlog {
+            position: absolute;
             padding: 20px;
-            text-align: center;
+            padding-bottom: 40px;
+
             border: 2px solid rgb(255, 255, 255);
             border-radius: 10px;
             backdrop-filter: blur(100px);
             box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-            position: absolute;
+
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            opacity: 0%;
-            transition-delay: 10s;
+
             transition: all 0.5s ease;
+            opacity: 0%;
         }
 
         .loadlog.active {
+            width: 400px;
+            height: 200px;
             opacity: 100%;
+        }
+
+        .logtxtform {
+            position: relative;
+            top: 50px;
+            height: 250px;
+        }
+
+        #botLogBtn {
+            position: relative;
+            top: 20px;
+        }
+
+        #li {
+            z-index: 1;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            transition: all 0.5s ease;
+        }
+
+        .right.active #li {
+            left: 50%;
+            top: 35%;
+        }
+
+        #logbtn {
+            position: relative;
+            bottom: 85px;
+            right: 9px;
         }
 
         .right.active {
@@ -175,14 +280,7 @@ a {
             left: 100%;
         }
 
-            #li {
-                opacity: 100%;
-                transition: all 0.5s ease;
-            }
-
-            .right.active #li {
-                opacity: 0%;
-            }
+            
 
 
 
