--- a/stressapp/templates/signin.html
+++ b/stressapp/templates/signin.html
@@ -1,15 +1,17 @@
-<form method="post" action="{% url 'signin' %}" class="mb-2">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Username" Required>
-        <i class="bx bxs-user"></i>
-    </div>
-    <div class="form-group">
-        <label for="pass1">Password</label>
-        <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Enter Your Password" Required>
-        <i class="bx bxs-lock-alt"></i>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Log In</button>
-</form>
+<div class="form-div">
+    <form method="post" action="{% url 'signin' %}" class="mb-2">
+        {% csrf_token %}
+        <div class="logtxtform">
+            <div class="form-group">
+                <input type="text" class="form-control log" id="username" name="username" placeholder="Username" Required>
+                <i class="bx bxs-user"></i>
+            </div>
+            <div class="form-group" id="botLogBtn">
+                <input type="password" class="form-control log" id="pass1" name="pass1" placeholder="Password" Required>
+                <i class="bx bxs-lock-alt"></i>
+            </div>
+        </div>
+    
+        <button id="logbtn" type="submit" class="btn btn-primary">Log In</button>
+    </form>
+</div>
