--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1,48 +1,17 @@
-body {
-    background-color: salmon;
+a {
+    color: rgb(255, 255, 255);
 }
 
-.popupwrap.d {
-    opacity: 0%;
-    pointer-events: none;
+.signout {
+    position: fixed;
+    height: 50px;
+    width: 150px;
+    z-index: 1;
+
+    font-family: Helvetica;
+    font-size: 1.5rem;
+    text-shadow: 0 0 15px rgba(0, 0, 0, .2);
     
-    transition: opacity 0.5s ease; 
-
+    left: calc(100vw - 125px);
+    top: 20px;
 }
-
-    .popupwrap {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-
-        width: 300px;
-        height: 350px;
-
-        background-color: rgb(255, 255, 255);
-        color: rgb(0, 0, 0);
-
-        border: 2px solid;
-        border-radius: 10px;
-
-        opacity: 100%
-    }
-
-        .popupwrap h1 {
-            text-align: center;
-            font-family: Helvetica;
-        }
-
-        .popupwrap ul {
-            margin: 5px;
-        }
-
-        .popupwrap button {
-            width: 300px;
-            height: 100px;
-
-            outline: none;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-        }
