--- a/stressapp/static/css/index.css
+++ b/stressapp/static/css/index.css
@@ -1,283 +1,151 @@
-body {
-    color: white;
+* {
+    margin: 0px;
 }
 
+/* Font styling and page titles */
+
+body {
+    color: rgb(255, 255, 255);
+    font-family: Helvetica, Arial, sans-serif
+}
 
 a {
     color: white;
 }
 
-.form-div .btn {
-    position: relative;
-    width: 420px;
-    height: 57px;
-    bottom: 15px;
-
-    background-color: white;
-    color: rgba(0, 0, 0, .2);
-    border: none;
-    outline: none;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
+h2 {
+    font-size: 3rem;
 }
 
-.form-control {
+
+#reg-title {
     position: absolute;
-    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    
+    opacity: 0%;
+    transition: opacity 1s ease .25s;
 }
 
-.form-group {
-    position: relative;
-    right: 10px;
-    width: 100%;
-    height: 15%;
+
+#login-title {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    
+    opacity: 0%;
+    transition: opacity 1s ease .5s;
 }
 
+/* Font styling and page titles -- END */
 
-    .form-group input {
-        position: absolute;
+
+/* Background behavior, lr highlights */
+.left {
+    position: absolute;
+    top: 0vh;
+    left: 0vw;
+    height: 100vh;
+    width: 50vw;
+
+    user-select: none;
+    overflow: hidden;
+    
+    background-image: linear-gradient(90deg ,rgb(227, 97, 97), rgb(255, 169, 82));
+    transition: width 0.5s ease;
+    
+}   
+
+.left.active {
+    width: 100vw;
+}
+
+.left.deactive {
+    width: 0vw;
+}
+
+    .lhighlight {
+        position: fixed;
         left: 0;
-        height: 20px;
-        width: 100%;
-        background: transparent;
-        border: none;
-        outline: none;
-        color: white;
-        border: 1px solid rgba(255, 255, 255, 1);
-        padding: 10px;
-        margin: 1px;
-        border-radius: 40px;
-    }
-
-    .form-group input::placeholder {
-        color: rgb(255, 255, 255);
-    }
-
-    .form-group i {
-        position: absolute;
-        font-size: 25px;
-        left: 95%;
-        top: 54%;
-        transform: translateY(-60%);
-    }
-
-
-    .left {
-        user-select: none;
-        font-size: 40px;
-        font-family: Helvetica;
-        top: 0vh;
-        left: 0vw;
-        position: absolute;
-        background-image: linear-gradient(90deg ,rgb(227, 97, 97), rgb(255, 169, 82));
         height: 100vh;
-        width: 50vw;
-        transition: width 0.5s ease;
-        overflow: hidden;
-    }   
-
-    .left.active {
-        width: 100vw;
-    }
-
-    .left.deactive {
-        width: 0vw;
-        overflow: hidden;
-    }
-
-
-        .loadreg {
-            position: absolute;
-            padding: 20px;
-            padding-bottom: 40px;
-            backdrop-filter: blur(100px);
-            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-
-            border: 2px solid rgb(255, 255, 255);
-            border-radius: 10px;
-            
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-            transition: all 0.5s ease;
-            opacity: 0%;
-        }
-
-            .loadreg.active {
-                width: 400px;
-                height: 500px;
-                opacity: 100%;
-            }
-
-            .regtxtform {
-                position: relative;
-                top: 50px;
-                height: 300px;
-            }
+        width: 200px;
+        z-index: 1;
         
-        .lhighlight {
-            height: 100vh;
-            width: 200px;
-            position: fixed;
-            z-index: 1;
-            transition: all ease 1s;
-            opacity: 0%;
-            background-image: linear-gradient(90deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
-        }
-
-            .left:hover .lhighlight {
-                z-index: 1;
-                opacity: 100%;
-                
-            }
-
-            .left.active .lhighlight {
-                opacity: 0%;
-                pointer-events: none;
-            }
-
-            .left.deactive .lhighlight {
-                opacity: 0%;
-                pointer-events: none;
-            }
-
-        .rhighlight {
-            height: 100vh;
-            width: 200px;
-            position: fixed;
-            left: calc(100vw - 200px);
-            z-index: 1;
-            transition: all 1s ease;
-            background-image: linear-gradient(270deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
-            opacity: 0%;
-        }
-
-            .right:hover .rhighlight {
-                opacity: 100%;
-                
-            }
-
-            .right.active .rhighlight {
-                opacity: 0%;
-                pointer-events: none;
-            }
-
-            .right.deactive .rhighlight {
-                opacity: 0%;
-                pointer-events: none;
-            }
-
-        .form-div {
-            width: 100%;
-            height: 100%;
-        }
-
-
-            #reg {
-                z-index: 1;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                opacity: 0%;
-                transform: translate(-50%, -50%);
-                transition: all 1s ease;
-                transition: opacity 1s ease .25s;
-            }
-
-            .left.active #reg {
-                left: 50%;
-                top: 10%;
-            }
-
-
-    .right {
-        user-select: none;
-        font-size: 40px;
-        font-family: Helvetica;
-        top: 0vh;
-        left: 50vw;
-        position: absolute;
-        background-image: linear-gradient(90deg, rgb(255, 169, 82), rgb(255, 226, 133));
-        height: 100vh;
-        width: 50vw;
-        left: 50%;
-        transition: all 0.5s ease;
-        overflow: hidden;
+        
+        opacity: 0%;
+        background-image: linear-gradient(90deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
+        transition: all ease 1s;
     }
 
-    .right.active {
-        top: 0;
-        left: 0;
-        width: 100vw;
-    }
-
-    .right.deactive {
-        width: 0vw;
-        left: 100%;
-    }
-
-        .loadlog {
-            position: absolute;
-            padding: 20px;
-            padding-bottom: 40px;
-
-            border: 2px solid rgb(255, 255, 255);
-            border-radius: 10px;
-            backdrop-filter: blur(100px);
-            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-            transition: all 0.5s ease;
-            opacity: 0%;
-        }
-
-        .loadlog.active {
-            width: 400px;
-            height: 200px;
+        .left:hover .lhighlight {
             opacity: 100%;
         }
 
-        .logtxtform {
-            position: relative;
-            top: 50px;
-            height: 250px;
-        }
-
-        #botLogBtn {
-            position: relative;
-            top: 20px;
-        }
-
-        #li {
-            z-index: 1;
-            position: absolute;
-            left: 50%;
-            top: 50%;
+        .left.active .lhighlight {
             opacity: 0%;
-            transform: translate(-50%, -50%);
-            transition: opacity 1s ease .5s;
+            pointer-events: none;
         }
 
-        .right.active #li {
-            left: 50%;
-            top: 35%;
+        .left.deactive .lhighlight {
+            opacity: 0%;
+            pointer-events: none;
         }
 
-        #logbtn {
-            position: relative;
-            bottom: 85px;
-            right: 9px;
-        }
+.right {
+    position: absolute;
+    top: 0vh;
+    left: 50vw;
+    height: 100vh;
+    width: 50vw;
+    
+    overflow: hidden;
+    user-select: none;
 
+    background-image: linear-gradient(90deg, rgb(255, 169, 82), rgb(255, 226, 133));
+    transition: all 0.5s ease;
+}
 
+.right.active {
+    top: 0;
+    left: 0;
+    width: 100vw;
+}
+
+.right.deactive {
+    width: 0vw;
+    left: 100%;
+}
+
+    .rhighlight {
+        height: 100vh;
+        width: 200px;
+        position: fixed;
+        left: calc(100vw - 200px);
+        z-index: 1;
+        transition: all 1s ease;
+        background-image: linear-gradient(270deg, rgb(255, 255, 255, .35), rgb(255, 255, 255, 0));
+        opacity: 0%;
+    }
+
+        .right:hover .rhighlight {
+            opacity: 100%;
             
+        }
+
+        .right.active .rhighlight {
+            opacity: 0%;
+            pointer-events: none;
+        }
+
+        .right.deactive .rhighlight {
+            opacity: 0%;
+            pointer-events: none;
+        }
+/* Background behavior, lr highlights -- END */   
 
 
 
