--- a/homepage/static/css/background.css
+++ b/homepage/static/css/background.css
@@ -14,6 +14,11 @@ body {
     opacity: 80%;
     pointer-events: none;
     user-select: none;
+    z-index: -2;
+}
+
+.blobs {
+    z-index: -1;
 }
 
 #one {
