--- a/stressapp/templates/login.html
+++ b/stressapp/templates/login.html
@@ -1,3 +1,15 @@
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        <strong>Message:</strong> {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+</div>
+
+
 <h1 id="login-title2">Login</h1>
 
 <form method="post" action="{% url 'login' %}">
