--- a/stressapp/templates/register.html
+++ b/stressapp/templates/register.html
@@ -1,3 +1,14 @@
+<div class="messages">
+  {% for message in messages %}
+  <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      <strong>Message:</strong> {{ message }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  {% endfor %}
+</div>
+
 <h1 id="reg-title2">Register</h1>
 
 <form method="post" action="{% url 'register' %}" class="regform" onsubmit="return checkSubmit(this);">
